# cpp-learning-projects

./: .gitignore  LICENSE  README.md  index.html
particles/: CMakeLists.txt  Doxyfile  README.md
particles/html/: README_8md.html  annotated.html  classClassicalParticle-members.html  classClassicalParticle.html  classClassicalParticle__coll__graph.dot  classClassicalParticle__coll__graph.md5  classClassicalParticle__inherit__graph.map  classParticle-members.html  classParticle.html  classParticle__inherit__graph.dot  classParticle__inherit__graph.map  classParticle__inherit__graph.md5  classQuantumParticle-members.html  classQuantumParticle.html  classQuantumParticle__coll__graph.map  classQuantumParticle__inherit__graph.dot  classQuantumParticle__inherit__graph.md5  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  main_8cpp.html  main_8cpp__incl.dot  main_8cpp__incl.map  main_8cpp__incl.md5  particle_8cpp.html  particle_8cpp__incl.dot  (+22 more)
particles/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  (+31 more)
particles/include/: particle.h  simulation.h
particles/src/: CMakeLists.txt  main.cpp  particle.cpp  simulation.cpp
signals/src/: BandPassFilter.cpp  CMakeLists.txt  MovingAverageFilter.cpp  NoisySignal.cpp  Signal.cpp  main.cpp  utils.cpp
(+960 files in other folders)
